@@ -67,6 +67,7 @@ class CoreParserFunctions {
 		$parser->setFunctionHook( 'talkpagenamee',    array( __CLASS__, 'talkpagenamee'    ), SFH_NO_HASH );
 		$parser->setFunctionHook( 'subjectpagename',  array( __CLASS__, 'subjectpagename'  ), SFH_NO_HASH );
 		$parser->setFunctionHook( 'subjectpagenamee', array( __CLASS__, 'subjectpagenamee' ), SFH_NO_HASH );
+		$parser->setFunctionHook( 'pipetrick',        array( __CLASS__, 'pipetrick'        ), SFH_NO_HASH );
 		$parser->setFunctionHook( 'tag',              array( __CLASS__, 'tagObj'           ), SFH_OBJECT_ARGS );
 		$parser->setFunctionHook( 'formatdate',		  array( __CLASS__, 'formatDate'	   ) );
 
@@ -437,6 +438,17 @@ class CoreParserFunctions {
 		if ( is_null($t) )
 			return '';
 		return $t->getSubjectPage()->getPrefixedUrl();
+	}
+
+	/**
+	 * Performs the pipe trick. Can be used in three ways:
+	 * {{pipetrick:title}} == {{pipetrick:title|}} != {{pipetrick:|title}}
+	 */
+	static function pipetrick( $parser, $link = '', $text = '' ) {
+		if ($link)
+			return $parser->getPipeTrickText( $link );
+		else
+			return $parser->getPipeTrickLink( $text );
 	}
 
 	/**
