@@ -834,6 +834,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 4099)  Pipe trick doesn't work when emptiness is only provided by empty template parameter 
 * (bug 845)   [[#foo|]], [[/bar|]] should be equivalent to [[#foo|foo]], [[/bar|bar]] (new use of "pipe trick")
 * (bug 21660) Support full-width commas for pipe trick
+* (bug 7264)  Magic word to give Page Title as if pipe-trick performed on it {{pipetrick:}}
 
 === Languages updated in 1.16 ===
 
